--- a/docs/机器学习评价指标.md
+++ b/docs/机器学习评价指标.md
@@ -213,7 +213,7 @@ $$
 
 ### 轮廓系数
 
-轮廓系数（Silhouette Coefficient)适用于实际类别信息未知的情况。对单个样本，假设 $a$ 是与它同类别中其他样本的平均距离，$b$ 是与它距离最近不同类别中样本的平均距离，那么，
+轮廓系数（Silhouette Coefficient）适用于实际类别信息未知的情况。对单个样本，假设 $a$ 是与它同类别中其他样本的平均距离，$b$ 是与它距离最近不同类别中样本的平均距离，那么，
 
 $$
 s = \frac{b -a}{max(a, b)}
